@@ -1,6 +1,11 @@
+2010-01-03  Donal K. Fellows  <dkf@users.sf.net>
+
+	* unix/tcl.m4 (SC_CONFIG_CFLAGS): [Bug 1636685]: Use the configuration
+	for modern FreeBSD suggested by the FreeBSD porter.
+
 2010-01-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
-	* generic/tkMenu.h: [Patch 2848897] Support the system keyboard
+	* generic/tkMenu.h: [Patch 2848897]: Support the system keyboard
 	* win/tkWinMenu.c:  cues option on Windows. This system parameter
 	hides the underlines on menu items unless the keyboard is used to
 	open the menu. (kovalenko, thoyts)
